Fix: replaced / removed broken CSS

--- a/frontend-react/src/App.scss
+++ b/frontend-react/src/App.scss
@@ -3,14 +3,6 @@
   font-family: var(--font-base);
 }
 
-.app-whitebg {
-  background-color: var(--white-color);
-}
-
-.app-primarybg {
-  background-color: var(--primary-color);
-}
-
 .app-container {
   width: 100%;
   min-height: 100vh;
@@ -28,11 +20,11 @@
 .head-text {
   font-size: 2.75rem;
   font-weight: 800;
-  color: var(--primary-color);
+  color: var(--white-color);
   text-transform: capitalize;
 
   span {
-    color: var(--secondary-color);
+    color: var(--cyan-color);
   }
 
   @media screen and (min-width: 2000px) {
