--- a/frontend-react/src/components/Navbar/Navbar.scss
+++ b/frontend-react/src/components/Navbar/Navbar.scss
@@ -1,22 +1,18 @@
 .app-navbar {
   width: 100%;
-
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding: 1rem 2rem;
-  // backdrop-filter: blur(4px);
-  // -webkit-backdrop-filter: blur(4px);
   position: fixed;
   z-index: 2;
 
   h2 {
-    color: var(--primary-color);
+    color: var(--white-color);
   }
 
   span {
-    color: #f3e600;
+    color: var(--yellow-color);
   }
 }
 
@@ -25,7 +21,6 @@
   height: 40px;
   border-radius: 50%;
   position: relative;
-
   display: flex;
   justify-content: center;
   align-items: center;
@@ -41,12 +36,9 @@
     top: 0;
     right: 0;
     z-index: 5;
-
     padding: 1rem;
-
     width: 80%;
     height: 100vh;
-
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
@@ -63,7 +55,7 @@
     svg {
       width: 35px;
       height: 35px;
-      color: var(--secondary-color);
+      color: var(--cyan-color);
       margin: 0.5rem 1.3rem;
     }
 
@@ -73,7 +65,6 @@
       padding: 0;
       height: 100%;
       width: 100%;
-
       display: flex;
       justify-content: center;
       align-items: center;
@@ -88,11 +79,10 @@
           font-size: 1rem;
           text-transform: uppercase;
           font-weight: 500;
-
           transition: all 0.5s ease-in-out;
 
           &:hover {
-            color: var(--secondary-color);
+            color: var(--cyan-color);
           }
         }
       }
